# treepath-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  tox.ini
src/treepath/: __init__.py
src/treepath/descriptor/: abstract_document.py  descriptor_builder.py  descriptor_functions.py  descriptors.py  document.py  document_iterator.py  document_list.py  path_descriptor.py
src/treepath/path/: typing_alias.py
src/treepath/path/builder/: abstract_class_builder.py  dash_path_builder.py  patch_constants.py  path_builder.py  path_builder_predicate.py  path_predicate.py  root_path_builder.py  symbol.py
src/treepath/path/descriptor/: abstract_document.py  descriptor.py  document.py
src/treepath/path/exceptions/: infinite_loop_detected.py  match_not_found_error.py  nested_match_not_found_error.py  path_syntax_error.py  pop_error.py  set_error.py  stop_traversing.py  traversing_error.py  treepath_exception.py
src/treepath/path/traverser/: empty_match.py  has_function.py  imaginary_match.py  key_match.py  list_match.py  match.py  match_traverser.py  nested_match_traverser.py  nested_value_traverser.py  parent_match.py  predicate_match.py  root_match.py  trace.py  traverser_functions.py  traverser_match.py  traverser_state_match.py  value_traverser.py
src/treepath/path/typing/: json_arg_types.py  json_types.py
src/treepath/path/util/: decorator.py  function.py  match_to_path.py  path_property.py  trace.py
src/treepath/path/utils/: function.py  match_to_path.py  not_set.py  path_property.py
src/treepath/path/vertex/: generic_wildcard_vertex.py  key_vertex.py  list_vertex.py  parent_vertex.py  predicate_vertex.py  recursive_vertex.py  root_vertex.py  tuple_vertex.py  vertex.py
tests/data/: a_k_k_a_k_k_k_a.json  all_data_types.json  dash.json  data.py  gen_data.py  k_a_a_k_a_a_a_k.json  keys.json  solar-system.json  three_dimensional_list.json
tests/treepath/: conftest.py  test_3d_list_match.py  test_compare_match.py  test_dash_match.py  test_document.py  test_exception_miscellaneous.py  test_expression_str.py  test_filter_match.py  test_generic_wildcard_match.py  test_key_match.py  test_match_miscellaneous.py  test_nested_match.py  test_parent_match.py  test_path_builder_miscellaneous.py  test_path_descriptor.py  test_path_property.py  test_pop.py  test_recursion_match.py  test_set.py  test_solar_system.py  test_symbol_miscellaneous.py  test_trace.py  test_vertex_miscellaneous.py
tests/utils/: file_util.py  json_utils.py  readme_generator.py  traverser_utils.py
