########################################################################################################################
# Configuring setup() using pyproject.toml file see the following for details
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html
########################################################################################################################
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "treepath"
dynamic = [
    "version"
]
requires-python = ">= 3.9"
authors = [
    { name = "Joey Sullivan", email = "monkeydevtools@gmail.com" },
]
maintainers = [
    { name = "Joey Sullivan", email = "monkeydevtools@gmail.com" },
]
description = "A python query language, similar to xpath and jsonpath, for extracting data from a json data structure."
readme = "README.md"
license = { file = "LICENSE.md" }
classifiers = [
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent"
]

# Add the package dependencies here.  Avoid using requirement-specifiers unless it is nessasary.
# https://packaging.python.org/en/latest/guides/writing-pyproject-toml/#dependencies-and-requirements
# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#configuring-setuptools-using-pyproject-toml-files
dependencies = []

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-cov",
    "tox"
]

[project.urls]
Repository = "https://github.com/monkeydevtools/treepath-python"


# https://setuptools.pypa.io/en/latest/userguide/pyproject_config.html#dynamic-metadata
[tool.setuptools.dynamic]
# The correct VERSION generated by build pipeline
version = { file = "VERSION" }


# https://docs.pytest.org/en/7.1.x/reference/customize.html#pyproject-toml
[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov-fail-under=80"
pythonpath = [
    "src"
]
testpaths = [
    "tests"
]


