########################################################################################################################
# Configuring setup() using setup.cfg files see the following for details
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
########################################################################################################################
[metadata]
#name is injected by gitlab during the build
name = treepath
#version is injected by gitlab during the build
version = 0.0.0.dev1
author="Joey Sullivan",
author_email="monkeydevtools@gmail.com"
description = A dev tool for performing queries on json objects.
long_description = file: README.md
long_description_content_type = text/markdown
#url is injected by gitlab during the build
url=https://github.com/monkeydevtools/treepath-python
license="Apache Software License"
license_file=LICENSE.md
platform = any
#full list of classifiers can be found here
#https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
zip_safe=True
include_package_data=True
package_dir=
    =src
packages = find:

python_requires =
  >=3.9

# Add the package dependencies here.  Be sure to specify requirement-specifiers but don't be to restrictive to
# allow external python project to control versions.
# https://packaging.python.org/discussions/install-requires-vs-requirements/#install-requires
# https://pip.pypa.io/en/stable/reference/pip_install/#requirement-specifiers
#install_requires =
# jsonpath-ng>=1.4.3,<2.0.0

[options.packages.find]
where=src
