########################################################################################################################
# Configuring setup() using setup.cfg files see the following for details
# https://setuptools.readthedocs.io/en/latest/setuptools.html#configuring-setup-using-setup-cfg-files
########################################################################################################################
[metadata]
#name is injected by gitlab during the build
name = treepath
#version is injected by gitlab during the build
version = 1.0.0rc8
author="Joey Sullivan",
author_email="monkeydevtools@gmail.com"
description = A python query language, similar to xpath and jsonpath, for extracting data from a json data structure.
long_description = file: README.md
long_description_content_type = text/markdown
#url is injected by gitlab during the build
url=https://github.com/monkeydevtools/treepath-python
license="Apache Software License"
license_file=LICENSE.md
platform = any
#full list of classifiers can be found here
#https://pypi.org/classifiers/
classifiers =
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
zip_safe=True
include_package_data=True
package_dir=
    =src
packages = find:

python_requires =
  >=3.7

[options.packages.find]
where=src
